[PIN-3604] Fix table horizontal scrollbar

--- a/src/assets/scss/_layout.scss
+++ b/src/assets/scss/_layout.scss
@@ -19,7 +19,7 @@
 }
 
 .table-wrapper {
-	overflow-x: scroll;
+	overflow-x: auto;
 }
 
 .loading-overlay.is-active.is-full-page {
