--- a/src/assets/scss/_table.scss
+++ b/src/assets/scss/_table.scss
@@ -45,6 +45,7 @@ table.table {
 
 .b-table {
   .table {
+    width: calc(100% - 10px);
     border: 0;
     border-radius: 0;
   }
